// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`object > add index signature with value string 1`] = `
"type Zod2ts_4_duplojs = {
    name: string;
} & {
    [key: string]: string;
};"
`;

exports[`object > good template key 1`] = `
"type Zod2ts_3_duplojs = {
    "111": string;
    "test-1": string;
    test: string;
    "test@": string;
    _111: string;
};"
`;

exports[`object > object 1`] = `
"type Zod2ts_0_duplojs = {
    name: string;
    age: number;
};"
`;

exports[`object > object with key optional 1`] = `
"type Zod2ts_1_duplojs = {
    name: string;
    age?: undefined;
};"
`;

exports[`object > object with union undefined 1`] = `
"type Zod2ts_2_duplojs = {
    name: string;
    age: number;
    optional?: undefined | string;
};"
`;

exports[`object > passthrough add index signature with value unknown 1`] = `
"type Zod2ts_5_duplojs = {
    name: string;
    age: number;
} & {
    [key: string]: unknown;
};"
`;
